--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </nav>
         <div class="main-content">
-            <h1 class="animated-text">Welcome!</h1>
+            <h1 class="animated-text">welcome to my page!</h1>
             <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
