--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
             </ul>
         </nav>
         <div class="main-content">
-            <h1 class="animated-text">welcome to my page!</h1>
+            <h1 class="animated-text">
+              <span class="char char1">w</span>
+              <span class="char char2">e</span>
+              <span class="char char3">l</span>
+              <span class="char char4">c</span>
+              <span class="char char5">o</span>
+              <span class="char char6">m</span>
+              <span class="char char7">e</span>
+              <span class="char char8"> </span> <!-- Space -->
+              <span class="char char9">t</span>
+              <span class="char char10">o</span>
+              <span class="char char11"> </span> <!-- Space -->
+              <span class="char char12">m</span>
+              <span class="char char13">y</span>
+              <span class="char char14"> </span> <!-- Space -->
+              <span class="char char15">p</span>
+              <span class="char char16">a</span>
+              <span class="char char17">g</span>
+              <span class="char char18">e</span>
+              <span class="char char19">!</span>
+            </h1>
             <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
