--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>cole chapman</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!-- Corrected Include for the OSRS Font CSS -->
-    <link rel="stylesheet" href="OSRS-Font-Parser-master/src/font/os-font.css" />
+    <!-- Updated path for the OSRS Font CSS -->
+    <link rel="stylesheet" href="OSRS-Font-Parser-master/src/os-font.css" />
 </head>
 <body>
     <div class="container">
@@ -20,28 +20,25 @@
             </ul>
         </nav>
         <div class="main-content">
-            <!-- Update your header to use the OSRS font effect -->
             <h1 id="osrs-header">wave2:glow2:welcome to my page!</h1>
             <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
-    <!-- Corrected Include for the OSRS Font JS and Initialize -->
-    <script src="OSRS-Font-Parser-master/src/font/os-font.js"></script>
+    <!-- Updated path for the OSRS Font JS -->
+    <script src="OSRS-Font-Parser-master/src/os-font.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', (event) => {
-        OsFont.compile(document.getElementById("osrs-header"));
-      });
+        document.addEventListener('DOMContentLoaded', (event) => {
+            OsFont.compile(document.getElementById("osrs-header"));
+        });
 
-      // Fetch the static shipping_forecast.txt file and insert its content into the page
-      fetch('data/shipping_forecast.txt')
-        .then(response => response.text())
-        .then(text => {
-          // Find the paragraph element where you want to insert the forecast
-          const shippingForecastPlaceholder = document.getElementById('shipping-forecast-placeholder');
-          // Set the inner text content of the paragraph to the fetched forecast text
-          shippingForecastPlaceholder.innerText = text;
-        })
-        .catch(error => console.error('Error fetching shipping forecast:', error));
+        // Fetch and insert the shipping forecast content
+        fetch('data/shipping_forecast.txt')
+            .then(response => response.text())
+            .then(text => {
+                const shippingForecastPlaceholder = document.getElementById('shipping-forecast-placeholder');
+                shippingForecastPlaceholder.innerText = text;
+            })
+            .catch(error => console.error('Error fetching shipping forecast:', error));
     </script>
 </body>
 </html>
