--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             </ul>
         </nav>
         <div class="main-content">
-            <h1 id="osrs-header">flash2:wave:welcome to my page!</h1>
+            <h1>flash2:wave:welcome to my page!</h1>
             <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
     <!-- Include the OSRS Font JS and initialize the library -->
     <script type="text/javascript" src="os-font.js"></script>
         <script type="text/javascript">
-            OsFont.compile();
+            document.addEventListener('DOMContentLoaded', function () {
+        OsFont.compile();
+    });
 
         fetch('data/shipping_forecast.txt')
             .then(response => response.text())
