--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
+    <!-- Fetch and insert content into the shipping forecast section -->
+    <script>
         fetch('data/shipping_forecast.txt')
             .then(response => response.text())
             .then(text => {
@@ -32,11 +34,13 @@
             })
             .catch(error => console.error('Error fetching shipping forecast:', error));
     </script>
-     <script type="text/javascript" src="os-font.js"></script>
-        <script type="text/javascript">
-            document.addEventListener('DOMContentLoaded', function () {
-        OsFont.compile();
-    });
+    <!-- Include the OSRS Font JS and initialize the library -->
+    <script src="os-font.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            OsFont.compile();
+        });
+    </script>
 </body>
 </html>
 
