--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </nav>
         <div class="main-content">
              <h1 id="osrs-header">flash2:wave2:welcome to my page!</h1>
+                <p>flash2:wave:Selling cooked swordfish 245gp ea</p>
+
              <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
