--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
         <div class="main-content">
-             <h1 id="osrs-header">flash2:wave2:welcome to my page!</h1>
+             <h1>flash2:wave2:welcome to my page!</h1>
                 <p>flash2:wave:Selling cooked swordfish 245gp ea</p>
 
              <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
@@ -40,7 +40,7 @@
     <script src="os-font.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            OsFont.compile(document.getElementById("osrs-header"));
+            OsFont.compile();
         });
     </script>
 </body>
