--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             </ul>
         </nav>
         <div class="main-content">
-             <h1>flash2:wave2:welcome to my page!</h1>
-                <p>flash2:wave:Selling cooked swordfish 245gp ea</p>
+             <h1>cole chapman</h1>
+                <p class="osrs-header">flash2:wave2:welcome to my page!</p>
+
 
              <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
