--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </ul>
         </nav>
         <div class="main-content">
-             <h1>cole chapman</h1>
-                <p class="osrs-header">flash2:wave2:welcome to my page!</p>
+            <!-- <h1>cole chapman</h1>  -->
+                <p class="osrs-header">flash2:wave2:welcome to the homepage of cole chapman!</p>
 
 
              <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
