--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!-- <h1>cole chapman</h1>  -->
                 <p class="osrs-header">flash2:wave2:welcome to the homepage of cole chapman!</p>
 
-
+            <p>red:weather reports and forecasts for the seas around the British Isles.</p>
              <p id="shipping-forecast-placeholder">This is where you can introduce yourself, your interests, or whatever you'd like your visitors to know about.</p>
         </div>
     </div>
