--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Projects - Cole Chapman</title>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'IBM Plex Sans', sans-serif;
+            background-color: #FFFFFF; /* White background */
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding: 20px;
+        }
+        .side-buttons {
+            list-style-type: none;
+            padding: 0;
+        }
+        .side-buttons li a {
+            display: block;
+            text-decoration: none;
+            color: black;
+            padding: 10px;
+            transition: color 0.3s ease;
+        }
+        .main-content {
+            margin: 50px 150px; /* Adjusted margin for centering */
+            padding: 20px;
+            border: 2px solid black; /* Black border for main content */
+            border-radius: 10px; /* Smoothed corners */
+            background-color: #FFF; /* Ensuring background is white */
+        }
+        h1, p {
+            color: #333;
+        }
+        h1 {
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <nav>
+            <ul class="side-buttons">
+                <li><a href="index.html">home</a></li>
+                <li><a href="about.html">about me</a></li>
+                <li><a href="links.html">links</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="cv.html">CV</a></li>
+            </ul>
+        </nav>
+        <div class="main-content">
+            <h1>Projects</h1>
+            <p>This page showcases my projects...</p>
+            <!-- Include your project details here -->
+        </div>
+    </div>
+</body>
+</html>
 
