--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#home">home</a></li>
                 <li><a href="#about">about me</a></li>
                 <li><a href="#links">links</a></li>
-                <li><a href="#projects">projects</a></li>
+                <li><a href="projects.html">projects</a></li>
                 <li><a href="#CV">CV</a></li>
             </ul>
         </nav>
