--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav>
             <ul class="side-buttons">
-                <li><a href="#home">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#about">about me</a></li>
                 <li><a href="#links">links</a></li>
                 <li><a href="projects.html">projects</a></li>
