--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Projects - Cole Chapman</title>
+    <title>Проекты - Cole Chapman</title>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -55,11 +55,10 @@
             </ul>
         </nav>
         <div class="main-content">
-            <h1>Projects</h1>
+            <h1>Проекты</h1>
             <p>This page showcases my projects...</p>
             <!-- Include your project details here -->
         </div>
     </div>
 </body>
 </html>
-
