--- a/projects.html
+++ b/projects.html
@@ -44,38 +44,25 @@
         /* Tab styles */
         .tabs {
             display: flex;
+            justify-content: center;
             margin-top: 20px;
-            cursor: pointer;
         }
         .tab {
-            flex: 1;
-            padding: 10px;
+            padding: 10px 20px;
+            margin: 0 5px;
             text-align: center;
             border: 1px solid black;
-            border-bottom: none;
+            border-radius: 5px;
             background-color: #f0f0f0;
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
             transition: background-color 0.3s ease;
         }
         .tab:hover {
             background-color: #ddd;
         }
-        .tab.active {
-            background-color: #fff;
-            font-weight: bold;
-        }
-        .tab-content {
-            border: 1px solid black;
-            border-radius: 5px;
-            padding: 20px;
-            display: none;
-        }
-        .tab-content.active {
-            display: block;
-        }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css">
 </head>
 <body>
     <div class="container">
@@ -90,54 +77,14 @@
         </nav>
         <div class="main-content">
             <h1>Проекты</h1>
-            <p>This page showcases my projects...</p>
-            
+            <p>This page showcases my projects. Click on the tabs below to download the datasets:</p>
             <div class="tabs">
-                <div class="tab" data-tab="tab1">Energy ETFs Data</div>
-                <div class="tab" data-tab="tab2">High Volatility Stocks</div>
-                <div class="tab" data-tab="tab3">S&P Index Funds</div>
-            </div>
-            <div id="tab1" class="tab-content">
-                <table id="energyTable" class="display" style="width:100%"></table>
-            </div>
-            <div id="tab2" class="tab-content">
-                <table id="stocksTable" class="display" style="width:100%"></table>
-            </div>
-            <div id="tab3" class="tab-content">
-                <table id="spTable" class="display" style="width:100%"></table>
+                <a href="./energy_etfs_data.csv" class="tab" download>Energy ETFs Data</a>
+                <a href="./high-volatility_stocks_data.csv" class="tab" download>High Volatility Stocks</a>
+                <a href="./s&p_index_funds_data.csv" class="tab" download>S&P Index Funds</a>
             </div>
         </div>
     </div>
-
-    <script>
-        $(document).ready(function () {
-            // Tab navigation
-            $('.tab').click(function () {
-                $('.tab').removeClass('active');
-                $('.tab-content').removeClass('active');
-                $(this).addClass('active');
-                $('#' + $(this).data('tab')).addClass('active');
-            });
-
-            // Initialize tables with data
-            $('#energyTable').DataTable({
-                ajax: 'energy_etfs_data.csv',
-                dom: 'Bfrtip',
-                buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
-            });
-
-            $('#stocksTable').DataTable({
-                ajax: 'high-volatility_stocks_data.csv',
-                dom: 'Bfrtip',
-                buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
-            });
-
-            $('#spTable').DataTable({
-                ajax: 's&p_index_funds_data.csv',
-                dom: 'Bfrtip',
-                buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
-            });
-        });
-    </script>
 </body>
 </html>
+
