--- a/projects.html
+++ b/projects.html
@@ -83,8 +83,13 @@
                 <a href="./high-volatility_stocks_data.csv" class="tab" download>High Volatility Stocks</a>
                 <a href="./s&p_index_funds_data.csv" class="tab" download>S&P Index Funds</a>
             </div>
+            <p>Click on the tabs below to access the Python code used in the projects:</p>
+            <div class="tabs">
+                <a href="./FAST_HALS.py" class="tab" download>FAST_HALS.py</a>
+                <a href="./HALS.py" class="tab" download>HALS.py</a>
+                <a href="./multiplicative_update.py" class="tab" download>multiplicative_update.py</a>
+            </div>
         </div>
     </div>
 </body>
 </html>
-
