--- a/projects.html
+++ b/projects.html
@@ -23,12 +23,13 @@
     <!-- LEFT NAV -->
     <div id="left">
       <ul class="menu">
-        <li><a href="index.html">About</a></li>
-        <li><a href="about.html">Bio</a></li>
+        <li><a href="index.html">home</a></li>
+        <li><a href="about.html">about me</a></li>
+        <li><a href="links.html">links</a></li>
+        <li class="active"><a href="projects.html">projects</a></li>
         <li><a href="cv.html">CV</a></li>
-        <li class="active"><a href="projects.html">Projects</a></li>
-        <li><a href="links.html">Links</a></li>
-      </ul>
+    </ul>
+
 
       <div class="spacer"></div>
 
