Update navigation links to use proper casing

--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,10 @@
     <!-- LEFT NAV -->
     <div id="left">
       <ul class="menu">
-        <li><a href="index.html">home</a></li>
-        <li><a href="about.html">about me</a></li>
-        <li><a href="links.html">links</a></li>
-        <li class="active"><a href="projects.html">projects</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li class="active"><a href="projects.html">Projects</a></li>
         <li><a href="cv.html">CV</a></li>
     </ul>
 
