--- a/about.html
+++ b/about.html
@@ -1,4 +1,55 @@
-<!-- CENTER CONTENT -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Me — Cole Chapman</title>
+
+  <!-- Reuse the same stylesheet -->
+  <link rel="stylesheet" href="projects.css?v=5" />
+</head>
+
+<body>
+  <!-- HEADER -->
+  <div id="top">
+    <div id="header">
+      <div id="headerText">
+        <div id="headerTitle">COLE CHAPMAN</div>
+        <div id="headerSubtitle">Arizona State University</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- MAIN LAYOUT -->
+  <div id="wrap">
+    <!-- LEFT NAV -->
+    <div id="left">
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="about.html">About Me</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="cv.html">CV</a></li>
+      </ul>
+
+      <div class="spacer"></div>
+
+      <div class="addressBox">
+        <div class="addressTitle">Address</div>
+        <div class="addressText">
+          Arizona State University<br/>
+          Tempe Campus<br/>
+          1151 S Forest Ave<br/>
+          Tempe, AZ 85281<br/>
+        </div>
+        <div class="addressLinks">
+          <a href="https://www.asu.edu/about/locations-maps" target="_blank" rel="noopener">View Map</a><br/>
+          <a href="https://www.asu.edu/about/locations-maps" target="_blank" rel="noopener">Directions</a>
+        </div>
+      </div>
+    </div>
+
+   <!-- CENTER CONTENT -->
 <div id="center">
   <div class="sectionTitle">About Me</div>
 
@@ -29,4 +80,11 @@
 
   <div class="footerSpace"></div>
 </div>
+
+
+    <!-- RIGHT COLUMN (empty, for spacing like institute layouts) -->
+    <div id="right"></div>
+  </div>
+</body>
+</html>
 
