Fix wording for clarity in about section

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <div class="aboutText">
       <div class="sectionText">
         I am currently employed at Arizona State University and am also a nondegree graduate student
-        at ASU Tempe. My academic background is in mathematics, with a focus on applied and numerical
+        at the Tempe campus. My academic background is in mathematics, with a focus on applied and numerical
         methods.
       </div>
 
