--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
     <!-- CENTER CONTENT -->
     <div id="center">
-      <div class="sectionTitle">Home</div>
+      <div class="sectionTitle">Welcome</div>
       <div class="sectionText">
-        Welcome. This site contains my projects, CV, and links to my work.
+        Welcome to my personal page!
       </div>
 
 
