--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <li class="active"><a href="about.html">About Me</a></li>
         <li><a href="links.html">Links</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="cv.html">CV</a></li>
+        <li><a href="Cole_Chapman_CV_web.pdf" target="_blank" rel="noopener">CV</a></li>
       </ul>
 
       <div class="spacer"></div>
