Update project description for NMF methods
Removed 'ALS-style' from the description of update rules.

--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
             Implemented and compared update rules for NMF as a dimensionality reduction / low-rank factorization method.
             Starting from a full (nonnegative) data matrix, the project constructs a lower-dimensional representation via
             matrix factors and evaluates convergence behavior and reconstruction quality across:
-            <b>HALS</b>, <b>FAST-HALS</b>, and <b>multiplicative updates</b> (ALS-style).
+            <b>HALS</b>, <b>FAST-HALS</b>, and <b>multiplicative updates</b>.
           </div>
 
           <div class="itemLinks">
